Change favicon and logo

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img src="/static/images/logo_small.jpg" alt="logo">
+<img src="/images/logo_small.jpg" alt="logo">
 
 </body>
 </html>
